# AI_slop_cleaner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-22-ai-slop-cleaner-cli.md
docs/superpowers/specs/: 2026-05-22-ai-slop-cleaner-design.md
src/ai_slop_cleaner/: __init__.py  classifier.py  cli.py  core.py  io_utils.py  manifest_writer.py  models.py  quarantine.py  scanner.py  text_utils.py
tests/: test_classification_rules.py  test_cli_integration.py  test_cli_smoke.py  test_manifest_and_duplicates.py  test_manifest_freshness.py  test_quarantine.py  test_scanner.py
