[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-slop-cleaner"
version = "0.1.0"
description = "CLI scaffold for AI Slop Cleaner."
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
ai-slop = "ai_slop_cleaner.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
